Adjusted to unified solver API