@@ -1,7 +1,7 @@
 // SPDX-License-Identifier: Apache-2.0 and MIT
 // Copyright 2023-20xx BooleWorks GmbH
 
-package com.booleworks.logicng.formulas;
+package com.booleworks.logicng.serialization;
 
 import static com.booleworks.logicng.formulas.CType.EQ;
 import static com.booleworks.logicng.formulas.CType.GE;
@@ -9,6 +9,17 @@ import static com.booleworks.logicng.formulas.CType.GT;
 import static com.booleworks.logicng.formulas.CType.LE;
 import static com.booleworks.logicng.formulas.CType.LT;
 
+import com.booleworks.logicng.formulas.And;
+import com.booleworks.logicng.formulas.CType;
+import com.booleworks.logicng.formulas.Equivalence;
+import com.booleworks.logicng.formulas.FType;
+import com.booleworks.logicng.formulas.Formula;
+import com.booleworks.logicng.formulas.FormulaFactory;
+import com.booleworks.logicng.formulas.Implication;
+import com.booleworks.logicng.formulas.Literal;
+import com.booleworks.logicng.formulas.Not;
+import com.booleworks.logicng.formulas.Or;
+import com.booleworks.logicng.formulas.PBConstraint;
 import com.booleworks.logicng.formulas.ProtoBufFormulas.PBComparison;
 import com.booleworks.logicng.formulas.ProtoBufFormulas.PBFormulaMapping;
 import com.booleworks.logicng.formulas.ProtoBufFormulas.PBFormulaType;
@@ -25,6 +36,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -49,9 +61,9 @@ public interface Formulas {
      * @param compress a flag whether the file should be compressed (zip)
      * @throws IOException if there is a problem writing the file
      */
-    static void serializeToFile(final Formula formula, final Path path, final boolean compress) throws IOException {
+    static void serializeFormulaToFile(final Formula formula, final Path path, final boolean compress) throws IOException {
         try (final OutputStream outputStream = compress ? new GZIPOutputStream(Files.newOutputStream(path)) : Files.newOutputStream(path)) {
-            serializeToStream(formula, outputStream);
+            serializeFormulaToStream(formula, outputStream);
         }
     }
 
@@ -63,9 +75,9 @@ public interface Formulas {
      * @return the formula
      * @throws IOException if there is a problem reading the file
      */
-    static Formula deserializeFromFile(final FormulaFactory f, final Path path, final boolean compress) throws IOException {
+    static Formula deserializeFormulaFromFile(final FormulaFactory f, final Path path, final boolean compress) throws IOException {
         try (final InputStream inputStream = compress ? new GZIPInputStream(Files.newInputStream(path)) : Files.newInputStream(path)) {
-            return deserializeFromStream(f, inputStream);
+            return deserializeFormulaFromStream(f, inputStream);
         }
     }
 
@@ -76,9 +88,9 @@ public interface Formulas {
      * @param compress a flag whether the file should be compressed (zip)
      * @throws IOException if there is a problem writing the file
      */
-    static void serializeListToFile(final List<Formula> formulas, final Path path, final boolean compress) throws IOException {
+    static void serializeFormulaListToFile(final List<Formula> formulas, final Path path, final boolean compress) throws IOException {
         try (final OutputStream outputStream = compress ? new GZIPOutputStream(Files.newOutputStream(path)) : Files.newOutputStream(path)) {
-            serializeListToStream(formulas, outputStream);
+            serializeFormulaListToStream(formulas, outputStream);
         }
     }
 
@@ -90,9 +102,9 @@ public interface Formulas {
      * @return the list of formulas
      * @throws IOException if there is a problem reading the file
      */
-    static List<Formula> deserializeListFromFile(final FormulaFactory f, final Path path, final boolean compress) throws IOException {
+    static List<Formula> deserializeFormulaListFromFile(final FormulaFactory f, final Path path, final boolean compress) throws IOException {
         try (final InputStream inputStream = compress ? new GZIPInputStream(Files.newInputStream(path)) : Files.newInputStream(path)) {
-            return deserializeListFromStream(f, inputStream);
+            return deserializeFormulaListFromStream(f, inputStream);
         }
     }
 
@@ -102,8 +114,8 @@ public interface Formulas {
      * @param stream  the stream
      * @throws IOException if there is a problem writing to the stream
      */
-    static void serializeToStream(final Formula formula, final OutputStream stream) throws IOException {
-        serialize(formula).writeTo(stream);
+    static void serializeFormulaToStream(final Formula formula, final OutputStream stream) throws IOException {
+        serializeFormula(formula).writeTo(stream);
     }
 
     /**
@@ -113,8 +125,8 @@ public interface Formulas {
      * @return the formula
      * @throws IOException if there is a problem reading from the stream
      */
-    static Formula deserializeFromStream(final FormulaFactory f, final InputStream stream) throws IOException {
-        return deserialize(f, PBFormulas.newBuilder().mergeFrom(stream).build());
+    static Formula deserializeFormulaFromStream(final FormulaFactory f, final InputStream stream) throws IOException {
+        return deserializeFormula(f, PBFormulas.newBuilder().mergeFrom(stream).build());
     }
 
     /**
@@ -123,8 +135,8 @@ public interface Formulas {
      * @param stream   the stream
      * @throws IOException if there is a problem writing to the stream
      */
-    static void serializeListToStream(final Collection<Formula> formulas, final OutputStream stream) throws IOException {
-        serialize(formulas).writeTo(stream);
+    static void serializeFormulaListToStream(final Collection<Formula> formulas, final OutputStream stream) throws IOException {
+        serializeFormulas(formulas).writeTo(stream);
     }
 
     /**
@@ -134,8 +146,8 @@ public interface Formulas {
      * @return the list of formulas
      * @throws IOException if there is a problem reading from the stream
      */
-    static List<Formula> deserializeListFromStream(final FormulaFactory f, final InputStream stream) throws IOException {
-        return deserializeList(f, PBFormulas.newBuilder().mergeFrom(stream).build());
+    static List<Formula> deserializeFormulaListFromStream(final FormulaFactory f, final InputStream stream) throws IOException {
+        return deserializeFormulaList(f, PBFormulas.newBuilder().mergeFrom(stream).build());
     }
 
     /**
@@ -143,8 +155,8 @@ public interface Formulas {
      * @param formula the formula
      * @return the protocol buffer
      */
-    static PBFormulas serialize(final Formula formula) {
-        return serialize(List.of(formula));
+    static PBFormulas serializeFormula(final Formula formula) {
+        return serializeFormulas(Collections.singletonList(formula));
     }
 
     /**
@@ -152,23 +164,18 @@ public interface Formulas {
      * @param formulas the formulas
      * @return the protocol buffer
      */
-    static PBFormulas serialize(final Collection<Formula> formulas) {
-        final var maps = computeMappings(formulas);
-        final var ids = formulas.stream().map(maps.first()::get).collect(Collectors.toList());
+    static PBFormulas serializeFormulas(final Collection<Formula> formulas) {
+        final Pair<Map<Formula, Integer>, Map<Integer, PBInternalFormula>> maps;
+        if (formulas.isEmpty()) {
+            maps = new Pair<>(Map.of(), Map.of());
+        } else {
+            maps = computeMappings(formulas.iterator().next().factory(), formulas);
+        }
+        final List<Integer> ids = formulas.stream().map(maps.first()::get).collect(Collectors.toList());
         return PBFormulas.newBuilder()
                 .addAllId(ids)
                 .setMapping(PBFormulaMapping.newBuilder().putAllMapping(maps.second()).build())
                 .build();
-    }
-
-    /**
-     * Computes the serialization mappings for a given formula.
-     * @param formula the formula
-     * @return a mapping from formula to ID and a mapping from ID to serialized formula (protocol buffer)
-     * for each sub-node of the formula.
-     */
-    static Pair<Map<Formula, Integer>, Map<Integer, PBInternalFormula>> computeMappings(final Formula formula) {
-        return computeMappings(List.of(formula));
     }
 
     /**
@@ -177,12 +184,16 @@ public interface Formulas {
      * @return a mapping from formula to ID and a mapping from ID to serialized formula (protocol buffer)
      * for each sub-node of the formulas.
      */
-    static Pair<Map<Formula, Integer>, Map<Integer, PBInternalFormula>> computeMappings(final Collection<Formula> formulas) {
-        final var formula2id = new LinkedHashMap<Formula, Integer>();
-        final var id2formula = new LinkedHashMap<Integer, PBInternalFormula>();
+    static Pair<Map<Formula, Integer>, Map<Integer, PBInternalFormula>> computeMappings(
+            final FormulaFactory f,
+            final Collection<Formula> formulas
+    ) {
+        final Map<Formula, Integer> formula2id = new LinkedHashMap<>();
+        final Map<Integer, PBInternalFormula> id2formula = new LinkedHashMap<>();
         int id = 0;
+        final SubNodeFunction subNodeFunction = new SubNodeFunction(f);
         for (final Formula formula : formulas) {
-            for (final Formula subnode : formula.apply(new SubNodeFunction(formula.factory()))) {
+            for (final Formula subnode : formula.apply(subNodeFunction)) {
                 if (!formula2id.containsKey(subnode)) {
                     formula2id.put(subnode, id);
                     id2formula.put(id, serialize(subnode, formula2id));
@@ -249,13 +260,10 @@ public interface Formulas {
                 final PBConstraint pbc = (PBConstraint) formula;
                 final PBInternalPseudoBooleanConstraint.Builder pbBuilder = PBInternalPseudoBooleanConstraint.newBuilder();
                 pbBuilder.setRhs(pbc.rhs());
-                pbBuilder.setComparator(serialize(pbc.comparator()));
+                pbBuilder.setComparator(serializeCType(pbc.comparator()));
                 pbc.coefficients().forEach(pbBuilder::addCoefficient);
                 pbc.operands().forEach(it -> pbBuilder.addLiteral(it.toString()));
                 builder.setPbConstraint(pbBuilder.build());
-                break;
-            case PREDICATE:
-                builder.setType(PBFormulaType.PREDICATE);
                 break;
         }
         return builder.build();
@@ -267,8 +275,8 @@ public interface Formulas {
      * @param bin the protocol buffer
      * @return the formula
      */
-    static Formula deserialize(final FormulaFactory f, final PBFormulas bin) {
-        return deserializeList(f, bin).get(0);
+    static Formula deserializeFormula(final FormulaFactory f, final PBFormulas bin) {
+        return deserializeFormulaList(f, bin).get(0);
     }
 
     /**
@@ -277,8 +285,8 @@ public interface Formulas {
      * @param bin the protocol buffer
      * @return the list of formulas
      */
-    static List<Formula> deserializeList(final FormulaFactory f, final PBFormulas bin) {
-        final var id2formula = deserialize(f, bin.getMapping());
+    static List<Formula> deserializeFormulaList(final FormulaFactory f, final PBFormulas bin) {
+        final Map<Integer, Formula> id2formula = deserializeFormula(f, bin.getMapping());
         return bin.getIdList().stream().map(id2formula::get).collect(Collectors.toList());
     }
 
@@ -288,8 +296,8 @@ public interface Formulas {
      * @param bin the protocol buffer
      * @return the mapping from ID to formula
      */
-    static Map<Integer, Formula> deserialize(final FormulaFactory f, final PBFormulaMapping bin) {
-        final var id2formula = new TreeMap<Integer, Formula>();
+    static Map<Integer, Formula> deserializeFormula(final FormulaFactory f, final PBFormulaMapping bin) {
+        final Map<Integer, Formula> id2formula = new TreeMap<>();
         bin.getMappingMap().forEach((k, v) -> {
             id2formula.put(k, deserialize(f, v, id2formula));
         });
@@ -321,7 +329,7 @@ public interface Formulas {
                 return f.naryOperator(naryType, bin.getOperandList().stream().map(id2formula::get).collect(Collectors.toList()));
             case PBC:
                 final int rhs = (int) bin.getPbConstraint().getRhs();
-                final CType ctype = deserialize(bin.getPbConstraint().getComparator());
+                final CType ctype = deserializeCType(bin.getPbConstraint().getComparator());
                 final List<Literal> lits = bin.getPbConstraint().getLiteralList().stream()
                         .map(it -> it.startsWith(NOT_SYMBOL) ? f.literal(it.substring(1), false) : f.literal(it, true))
                         .collect(Collectors.toList());
@@ -342,7 +350,7 @@ public interface Formulas {
      * @param comparison the comparator
      * @return the protocol buffer
      */
-    private static PBComparison serialize(final CType comparison) {
+    static PBComparison serializeCType(final CType comparison) {
         switch (comparison) {
             case EQ:
                 return PBComparison.EQ;
@@ -364,7 +372,7 @@ public interface Formulas {
      * @param bin the protocol buffer
      * @return the comparator
      */
-    private static CType deserialize(final PBComparison bin) {
+    static CType deserializeCType(final PBComparison bin) {
         switch (bin) {
             case EQ:
                 return EQ;
